# python_vs_n8n

./: .gitignore  README.md  pyproject.toml
src/: code.py  code2.py  code3.py  code4.py  price_history.csv
src/htmls/: nintendo_switch_20250724_141709.html  nintendo_switch_20250724_141723.html
src/python_vs_n8n/: __init__.py  main.py
